src/gesturePub/logs/drone_com/build.make.006.log.stderr
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp: In function ‘void command(std_msgs::String&)’:
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:8:14: error: cannot convert ‘std_msgs::String’ {aka ‘std_msgs::String_<std::allocator<void> >’} to ‘const char*’
    8 |   if (strcmp(msg, "Yes")){
      |              ^~~
      |              |
      |              std_msgs::String {aka std_msgs::String_<std::allocator<void> >}
In file included from /usr/include/c++/9/cstring:42,
                 from /usr/include/boost/math/policies/error_handling.hpp:14,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/noetic/include/ros/time.h:58,
                 from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/skanda/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/skanda/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/include/drone_com/gnc_functions.hpp:1,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:1:
/usr/include/string.h:137:32: note:   initializing argument 1 of ‘int strcmp(const char*, const char*)’
  137 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp: At global scope:
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:37:1: error: expected declaration before ‘}’ token
   37 | }
      | ^
In file included from /opt/ros/noetic/include/ros/subscription_callback_helper.h:35,
                 from /opt/ros/noetic/include/ros/subscriber.h:33,
                 from /opt/ros/noetic/include/ros/node_handle.h:33,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/include/drone_com/gnc_functions.hpp:14,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:1:
/opt/ros/noetic/include/ros/parameter_adapter.h: In instantiation of ‘static ros::ParameterAdapter<M>::Parameter ros::ParameterAdapter<M>::getParameter(const Event&) [with M = std_msgs::String_<std::allocator<void> >&; ros::ParameterAdapter<M>::Parameter = std_msgs::String_<std::allocator<void> >&; ros::ParameterAdapter<M>::Event = ros::MessageEvent<const std_msgs::String_<std::allocator<void> > >; typename boost::remove_reference<typename boost::remove_const<M>::type>::type = std_msgs::String_<std::allocator<void> >]’:
/opt/ros/noetic/include/ros/subscription_callback_helper.h:144:48:   required from ‘void ros::SubscriptionCallbackHelperT<P, Enabled>::call(ros::SubscriptionCallbackHelperCallParams&) [with P = std_msgs::String_<std::allocator<void> >&; Enabled = void]’
/opt/ros/noetic/include/ros/subscription_callback_helper.h:141:16:   required from here
/opt/ros/noetic/include/ros/parameter_adapter.h:78:30: error: binding reference of type ‘ros::ParameterAdapter<std_msgs::String_<std::allocator<void> >&>::Parameter’ {aka ‘std_msgs::String_<std::allocator<void> >&’} to ‘const std_msgs::String_<std::allocator<void> >’ discards qualifiers
   78 |     return *event.getMessage();
      |                              ^
make[2]: *** [CMakeFiles/square.dir/build.make:63: CMakeFiles/square.dir/src/square.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:210: CMakeFiles/square.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
